# Generalized-Fermi-Dirac-integrals

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  README.md  configure.ac  fermidirac.h  requirements.txt
doc/: Fermi-Dirac.tex  Makefile.am
examples/: Fermi-Dirac.c  Fermi-Dirac.nb  Fermi-Dirac.tm  Makefile.am  create_interface.py  example.c  example.f90  example.py  example_derivatives.c  python-example.py
matlab/: F.m  dF01.m  dF02.m  dF03.m  dF10.m  dF11.m  dF12.m  dF20.m  dF21.m  dF30.m  fd_REF.m
python/: setup.cfg
python/interface/: build_cffi_interface.py  cfermidirac.py  test.py
python/src/: python-example.py
python/src/fermidirac/helpers/: Derivatives.py  derivative_relations.py
python/src/fermidirac/interface/: build_cffi_interface.py  cfermidirac.py
python/tests/: derivative_test.py  fermi_functions_reference_data.csv  generate_compatibility_data.py  test_backwards_compatibility.py  test_benchmark.py  test_derivative.py
src/: BesselK.c  F-type_fermi_dirac.c  F-type_fermi_dirac_derivatives.c  F-type_fermi_dirac_derivatives_Arb.c  G-type_fermi_dirac.c  Makefile.am  Makefile.in  complete_fermi_dirac.c  eulerian.h  factorial.h  factorial_quad.h  fermi_dirac.c  hypergeometric.c  logistic_sigmoid.c  quick_fermi_dirac.c  tbl_double.h  tbl_float.h  zeta_eta.c
tests/: BesselK_failure_test.c  BesselK_reference values.nb  Continuity.gnu  Derivatives_recurrence_problem.nb  Sommerfeld_leading_term_reference values.nb  ULP.c  arb_fermidirac.c  arb_fermidirac_omp.c  continuity_test.c  cpc_reference_values.c  precision_test_derivatives.c  precision_test_sommerfeld_leading_term_derivatives.c  speed_test_derivatives.c
tests/refVALS/: refVALS_K_rnd_20211028.h
tests/refVALS/k_slices/-0.5/: README.txt  refVALS.m
tests/refVALS/k_slices/0/: README.txt  refVALS.m
tests/refVALS/k_slices/0.5/: Mma_good_REF_finally_2022-02-14.m  README.txt  refVALS.m
tests/refVALS/k_slices/1/: README.txt  refVALS.m
