[metadata]
name = fermidirac
version = 0.26
author = Andrzej Odrzywołek, Karol Urbański
description = Package of bindings to C functions calculating Fermi-Dirac functions using Sinh-Tanh quadrature.
#long_description = file: README.md
#long_description_content_type = text/markdown
url = https://github.com/VA00/Generalized-Fermi-Dirac-integrals
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C :: 99
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires=['cffi', 'mpmath', 'gmpy2']

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
