lib_LTLIBRARIES = libfermidirac.la
libfermidirac_la_SOURCES =  fermi_dirac.c complete_fermi_dirac.c F-type_fermi_dirac.c F-type_fermi_dirac_derivatives.c F-type_fermi_dirac_derivatives_Arb.c G-type_fermi_dirac.c hypergeometric.c zeta_eta.c BesselK.c factorial.h factorial_quad.h eulerian.h tbl_float.h tbl_double.h quick_fermi_dirac.c logistic_sigmoid.c
